--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,14 +3,49 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-<!--web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5"-->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/root-context.xml</param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+
     <servlet>
         <servlet-name>dispatcherServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>/WEB-INF/dispatcherServlet-servlet.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>dispatcherServlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
+    <filter>
+        <filter-name>userSecurityFilter</filter-name>
+        <filter-class>com.study.onlineshop.web.filters.UserSecurityFilter</filter-class>
+    </filter>
+    <filter>
+        <filter-name>adminSecurityFilter</filter-name>
+        <filter-class>com.study.onlineshop.web.filters.AdminSecurityFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>userSecurityFilter</filter-name>
+        <url-pattern>/</url-pattern>
+        <url-pattern>/products</url-pattern>
+        <url-pattern>/cart/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>adminSecurityFilter</filter-name>
+        <url-pattern>/product/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
